Fix: Overflow

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -7,10 +7,9 @@
 
 .about__first-section {
   
-  height: calc(100vh - 89px);
+  height: calc(100vh);
   width: 85%;
-  margin: auto;
-  margin-top: 89px;
+  margin: 89px auto;
   max-width: 1150px;
   display: flex;
   flex-direction: column;
