--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -11,12 +11,14 @@
   transform-origin: 21.3% 39.79%;
 }
 .index-section {
-  height: calc(100vh);
+  padding-top: 89px;
+  height: calc(100vh + 89px);
   padding: 0 200px;
 }
 
 .index__first-section {
   display: flex;
+  padding-top: 89px;
   align-items: center;
   // justify-content: center;
   flex-flow: row wrap;
